Fix mobile title overlap: use block display and larger margin

--- a/_sass/_includes/_header.scss
+++ b/_sass/_includes/_header.scss
@@ -56,12 +56,13 @@
 }
 
 .header__title {
+	display: block;
 	font-size: $sitetitle-small;
 	font-weight: $sitetitle-weight;
 	letter-spacing: $sitetitle-spacing;
 	line-height: 1;
 	color: $text-dark-color;
-	margin-right: 60px;
+	margin-right: 100px;
 
 	&:hover {
 		color: $accent-color;
